Tweak how accrediting provider shows

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -24,8 +24,8 @@
   {% endif %}
 
   <h1 class="heading-xlarge">
-    <span class="heading-secondary">{{ accrediting.name }}</span>
     {{ title }}
+    <span class="heading-secondary">Accredited by {{ accrediting.name }}</span>
   </h1>
 
   <div class="grid-row add-top-margin">
